[feature]: auto generate subjects